test/org/midica/testfiles/failing/meta-with-block.midica
INCLUDE_FILE inc/instruments.midica

META
	(
		composer	Beethoven
	)
END
